--- a/build-task.yaml
+++ b/build-task.yaml
@@ -24,7 +24,7 @@ spec:
 
   steps:
   - name: build
-    image: quay.io/buildah/stable
+    image: quay.io/buildah/upstream
     workingdir: /workspace/source
     command: ['buildah', 'bud', '--tls-verify=$(inputs.params.TLSVERIFY)', '--layers', '-f', '$(inputs.params.DOCKERFILE_PATH)', '-t', '$(outputs.resources.image.url):$(inputs.params.IMAGE_TAG)', '.']
     volumeMounts:
@@ -34,7 +34,7 @@ spec:
       privileged: true
 
   - name: push
-    image: quay.io/buildah/stable
+    image: quay.io/buildah/upstream
     command: ['buildah', 'push', '--tls-verify=$(inputs.params.TLSVERIFY)', '$(outputs.resources.image.url):$(inputs.params.IMAGE_TAG)', 'docker://$(outputs.resources.image.url):$(inputs.params.IMAGE_TAG)']
     volumeMounts:
     - name: varlibcontainers
