--- a/trigger-stage.yaml
+++ b/trigger-stage.yaml
@@ -27,12 +27,19 @@ spec:
 
   steps:
   - name: argo-stage
-    image: ubuntu
     workingdir: /workspace/argosource
+    image: ubuntu 
     script: |
       #!/bin/bash
+      apt-get -y update
+      apt-get -y install git-core
       echo "Before cat"
-      cat /workspace/source/.git/refs/heads/master
+      sed -i  "s/\(.*:.*:\).*/\1$(cat /workspace/source/.git/refs/heads/master)/" deployment.yaml
+      git config --global user.email "lists@mihai.tech"
+      git config --global user.name "mihaime"
+      git add deployment.yaml
+      git commit -m "adjusted stage to new container image $(cat /workspace/source/.git/refs/heads/master)"
+      git push origin stage || { echo "failed to push"; exit 1; }
       echo "Finished argo stage"
     securityContext:
       privileged: true
