--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -25,10 +25,12 @@ metadata:
 spec:
   type: git
   params:
-  - name: url
-    value: https://github.com/mihaime/code-to-prod-blog
   - name: revision
     value: stage
+  - name: refspec
+    value: refs/heads/stage:refs/heads/stage
+  - name: url
+    value: https://github.com/mihaime/code-to-prod-blog
 ---
 apiVersion: tekton.dev/v1alpha1
 kind: Pipeline
